Refactored the CommandRegistry and related classes for better structure. Enhanced the IngredientStorageTest to cover edge cases and fine-tuned exception handling in Application.